--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                 <version>2.0</version>
                 <configuration>
                     <server>TomcatServer</server>
-                    <path>/musicRest</path>
+                    <path>/</path>
                 </configuration>
             </plugin>
         </plugins>
@@ -54,7 +54,6 @@
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
-            <version>${jersey.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.ext</groupId>
@@ -90,6 +89,12 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
         </dependency>
     </dependencies>
     <properties>
